<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PHBC Connect</string>
    <string name="title_activity_log_in">PHBC Connect</string>
    <string name="action_settings">Settings</string>
    <string name="textPH">PleasantHill</string>
    <string name="textBC">BaptistChurch</string>
    <string name="buttonLogin">Log In</string>
    <string name="textUser">Username</string>
    <string name="textPass">Password</string>

</resources>
