<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.megathirio.phbcconnect.LogIn"
    android:background="#fffafafa">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textBC"
        android:id="@+id/ltxtBC"
        android:autoText="false"
        android:textColor="#ff029dff"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginTop="71dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ltxtPH"
        android:layout_toEndOf="@+id/ltxtPH" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textPH"
        android:id="@+id/ltxtPH"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_alignTop="@+id/ltxtBC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin"
        android:id="@+id/btnLogin"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/ltxtPass"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ptxtUser"
        android:layout_marginTop="80dp"
        android:maxWidth="320dp"
        android:minWidth="320dp"
        android:layout_below="@+id/ltxtBC"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passtxtPassword"
        android:minWidth="320dp"
        android:maxWidth="320dp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/ltxtUser"
        android:layout_alignLeft="@+id/ptxtUser"
        android:layout_alignStart="@+id/ptxtUser" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textUser"
        android:id="@+id/ltxtUser"
        android:layout_below="@+id/ptxtUser"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textPass"
        android:id="@+id/ltxtPass"
        android:layout_below="@+id/passtxtPassword"
        android:layout_alignLeft="@+id/ltxtUser"
        android:layout_alignStart="@+id/ltxtUser" />
</RelativeLayout>
